// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compute-element-view > view of cloud (exclude cloud, amazon.*) 1`] = `
{
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "id": "cloud.frontend:cloud.backend",
      "label": null,
      "parent": null,
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend",
      "target": "cloud.backend",
    },
    {
      "id": "support:cloud.frontend",
      "label": null,
      "parent": null,
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend",
    },
    {
      "id": "customer:cloud.frontend",
      "label": null,
      "parent": null,
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend",
    },
  ],
  "id": "cloud",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "links": null,
      "outEdges": [
        "support:cloud.frontend",
      ],
      "parent": null,
      "shape": "person",
      "tags": null,
      "technology": null,
      "title": "support",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "links": null,
      "outEdges": [
        "customer:cloud.frontend",
      ],
      "parent": null,
      "shape": "person",
      "tags": null,
      "technology": null,
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.frontend",
      "inEdges": [
        "support:cloud.frontend",
        "customer:cloud.frontend",
      ],
      "kind": "container",
      "links": null,
      "outEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "parent": null,
      "shape": "browser",
      "tags": null,
      "technology": null,
      "title": "frontend",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "kind": "container",
      "links": null,
      "outEdges": [],
      "parent": null,
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "backend",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
      ],
      "isInclude": true,
    },
    {
      "exprs": [
        {
          "element": "cloud",
          "isDescedants": false,
        },
        {
          "element": "amazon",
          "isDescedants": true,
        },
      ],
      "isInclude": false,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "cloud",
}
`;

exports[`compute-element-view > view of cloud 1`] = `
{
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "id": "cloud.frontend:cloud.backend",
      "label": null,
      "parent": "cloud",
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend",
      "target": "cloud.backend",
    },
    {
      "id": "cloud.backend:amazon",
      "label": null,
      "parent": null,
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "target": "amazon",
    },
    {
      "id": "support:cloud.frontend",
      "label": null,
      "parent": null,
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend",
    },
    {
      "id": "customer:cloud.frontend",
      "label": null,
      "parent": null,
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend",
    },
  ],
  "id": "cloud",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "links": null,
      "outEdges": [
        "support:cloud.frontend",
      ],
      "parent": null,
      "shape": "person",
      "tags": null,
      "technology": null,
      "title": "support",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "links": null,
      "outEdges": [
        "customer:cloud.frontend",
      ],
      "parent": null,
      "shape": "person",
      "tags": null,
      "technology": null,
      "title": "customer",
    },
    {
      "children": [
        "cloud.frontend",
        "cloud.backend",
      ],
      "color": "primary",
      "description": null,
      "id": "cloud",
      "inEdges": [],
      "kind": "system",
      "links": null,
      "outEdges": [],
      "parent": null,
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.frontend",
      "inEdges": [
        "support:cloud.frontend",
        "customer:cloud.frontend",
      ],
      "kind": "container",
      "links": null,
      "outEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "parent": "cloud",
      "shape": "browser",
      "tags": null,
      "technology": null,
      "title": "frontend",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "kind": "container",
      "links": null,
      "outEdges": [
        "cloud.backend:amazon",
      ],
      "parent": "cloud",
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "backend",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "amazon",
      "inEdges": [
        "cloud.backend:amazon",
      ],
      "kind": "system",
      "links": null,
      "outEdges": [],
      "parent": null,
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "amazon",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
      ],
      "isInclude": true,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "cloud",
}
`;

exports[`compute-element-view > view of cloud.frontend 1`] = `
{
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "id": "cloud.frontend.adminPanel:cloud.backend",
      "label": null,
      "parent": null,
      "relations": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.adminPanel",
      "target": "cloud.backend",
    },
    {
      "id": "cloud.frontend.dashboard:cloud.backend",
      "label": null,
      "parent": null,
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.dashboard",
      "target": "cloud.backend",
    },
    {
      "id": "support:cloud.frontend.adminPanel",
      "label": null,
      "parent": null,
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend.adminPanel",
    },
    {
      "id": "customer:cloud.frontend.dashboard",
      "label": null,
      "parent": null,
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend.dashboard",
    },
  ],
  "id": "cloudfrontend",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "links": null,
      "outEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "parent": null,
      "shape": "person",
      "tags": null,
      "technology": null,
      "title": "support",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "links": null,
      "outEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "parent": null,
      "shape": "person",
      "tags": null,
      "technology": null,
      "title": "customer",
    },
    {
      "children": [
        "cloud.frontend.adminPanel",
        "cloud.frontend.dashboard",
      ],
      "color": "primary",
      "description": null,
      "id": "cloud.frontend",
      "inEdges": [],
      "kind": "container",
      "links": null,
      "outEdges": [],
      "parent": null,
      "shape": "browser",
      "tags": null,
      "technology": null,
      "title": "frontend",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.frontend.adminPanel",
      "inEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "kind": "component",
      "links": null,
      "outEdges": [
        "cloud.frontend.adminPanel:cloud.backend",
      ],
      "parent": "cloud.frontend",
      "shape": "rectangle",
      "tags": [
        "old",
      ],
      "technology": null,
      "title": "adminPanel",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.frontend.dashboard",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "kind": "component",
      "links": null,
      "outEdges": [
        "cloud.frontend.dashboard:cloud.backend",
      ],
      "parent": "cloud.frontend",
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "dashboard",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend.adminPanel:cloud.backend",
        "cloud.frontend.dashboard:cloud.backend",
      ],
      "kind": "container",
      "links": null,
      "outEdges": [],
      "parent": null,
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "backend",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
      ],
      "isInclude": true,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "cloud.frontend",
}
`;

exports[`compute-element-view > view with 3 levels 1`] = `
{
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "id": "cloud.frontend.adminPanel:cloud.backend.graphql",
      "label": null,
      "parent": "cloud",
      "relations": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.adminPanel",
      "target": "cloud.backend.graphql",
    },
    {
      "id": "cloud.frontend.dashboard:cloud.backend.graphql",
      "label": null,
      "parent": "cloud",
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.dashboard",
      "target": "cloud.backend.graphql",
    },
    {
      "id": "cloud.backend.graphql:cloud.backend.storage",
      "label": null,
      "parent": "cloud.backend",
      "relations": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "source": "cloud.backend.graphql",
      "target": "cloud.backend.storage",
    },
    {
      "id": "cloud.backend.storage:amazon",
      "label": null,
      "parent": null,
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend.storage",
      "target": "amazon",
    },
    {
      "id": "support:cloud.frontend.adminPanel",
      "label": null,
      "parent": null,
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend.adminPanel",
    },
    {
      "id": "customer:cloud.frontend.dashboard",
      "label": null,
      "parent": null,
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend.dashboard",
    },
  ],
  "id": "cloud3levels",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "links": null,
      "outEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "parent": null,
      "shape": "person",
      "tags": null,
      "technology": null,
      "title": "support",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "links": null,
      "outEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "parent": null,
      "shape": "person",
      "tags": null,
      "technology": null,
      "title": "customer",
    },
    {
      "children": [
        "cloud.frontend.adminPanel",
        "cloud.frontend.dashboard",
        "cloud.backend",
      ],
      "color": "primary",
      "description": null,
      "id": "cloud",
      "inEdges": [],
      "kind": "system",
      "links": null,
      "outEdges": [],
      "parent": null,
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.frontend.adminPanel",
      "inEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "kind": "component",
      "links": null,
      "outEdges": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "parent": "cloud",
      "shape": "rectangle",
      "tags": [
        "old",
      ],
      "technology": null,
      "title": "adminPanel",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.frontend.dashboard",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "kind": "component",
      "links": null,
      "outEdges": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "parent": "cloud",
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "dashboard",
    },
    {
      "children": [
        "cloud.backend.graphql",
        "cloud.backend.storage",
      ],
      "color": "primary",
      "description": null,
      "id": "cloud.backend",
      "inEdges": [],
      "kind": "container",
      "links": null,
      "outEdges": [],
      "parent": "cloud",
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "backend",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.backend.graphql",
      "inEdges": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "kind": "component",
      "links": null,
      "outEdges": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "parent": "cloud.backend",
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "graphql",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.backend.storage",
      "inEdges": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "kind": "component",
      "links": null,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": "cloud.backend",
      "shape": "rectangle",
      "tags": [
        "old",
      ],
      "technology": null,
      "title": "storage",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "amazon",
      "inEdges": [
        "cloud.backend.storage:amazon",
      ],
      "kind": "system",
      "links": null,
      "outEdges": [],
      "parent": null,
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "amazon",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
        {
          "element": "cloud.frontend",
          "isDescedants": true,
        },
        {
          "element": "cloud.backend",
          "isDescedants": true,
        },
      ],
      "isInclude": true,
    },
    {
      "exprs": [
        {
          "element": "cloud.frontend",
          "isDescedants": false,
        },
      ],
      "isInclude": false,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "cloud",
}
`;
